# Cimple

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  SPECIFICATION.md  codex_exceptions_prompt.md  codex_maps_prompt.md  toolchain-emscripten.cmake
examples/: fibonacci.ci  hello.cim  sort.cim  strings_demo.cim
examples/shellbox/: shellbox.ci  showcase.ci
src/: main.c
src/ast/: ast.c  ast.h
src/common/: error.c  error.h  memory.c  memory.h
src/interpreter/: builtins.c  builtins.h  interpreter.c  interpreter.h
src/lexer/: lexer.h  lexer.re
src/parser/: parser.y  parser_helper.c  parser_helper.h
src/runtime/: regex_engine.c  regex_engine.h  scope.c  scope.h  value.c  value.h
src/semantic/: semantic.c  semantic.h
tests/: CMakeLists.txt  arrays.cim  booleans.cim  loops.cim  math.cim  run_tests.sh
tests/lib/: assert.sh
tests/manual/examples_shellbox_api/: expected_stdout  input.ci
tests/manual/readme_fibonacci_arg/: description.txt  expected_stdout  input.ci
tests/manual/readme_hello/: description.txt
tests/manual/readme_strings_demo/: description.txt  expected_stdout  input.ci
tests/manual/spec_absint_clampint/: description.txt  input.ci
tests/manual/spec_append_exists/: description.txt  expected_stdout  input.ci
tests/manual/spec_approx_equal_pair/: description.txt  input.ci
tests/manual/spec_approx_equal_zero_tol/: description.txt  input.ci
tests/manual/spec_args_echo/: args  description.txt  expected_stdout  input.ci
tests/manual/spec_array_bool_ops/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_for_names/: description.txt  input.ci
tests/manual/spec_array_function_mutation_bool/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_get_bool/: description.txt  input.ci
tests/manual/spec_array_get_int/: description.txt  input.ci
tests/manual/spec_array_get_set/: description.txt  input.ci
tests/manual/spec_array_get_string/: description.txt  input.ci
tests/manual/spec_array_insert_front_back/: description.txt  input.ci
tests/manual/spec_array_insert_middle_int/: description.txt  input.ci
tests/manual/spec_array_insert_middle_string/: description.txt  input.ci
tests/manual/spec_array_insert_zero_string/: description.txt
tests/manual/spec_array_mutators/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_ops/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_pop_int/: description.txt  input.ci
tests/manual/spec_array_pop_string/: description.txt
tests/manual/spec_array_push_bool/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_push_int/: description.txt  input.ci
tests/manual/spec_array_push_pop_string/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_ref/: description.txt  input.ci
tests/manual/spec_array_remove_back_int/: description.txt  input.ci
tests/manual/spec_array_remove_front_int/: description.txt  expected_stdout  input.ci
tests/manual/spec_array_remove_middle_string/: description.txt  input.ci
tests/manual/spec_array_set_bool/: description.txt  input.ci
tests/manual/spec_array_set_int/: description.txt  input.ci
tests/manual/spec_array_set_string/: description.txt
tests/manual/spec_array_sum/: description.txt  input.ci
tests/manual/spec_arrays_basic/: description.txt  expected_stdout  input.ci
tests/wasm/: run_cimple_wasm.js  run_wasm_tests.sh
tools/: README.md  fetch_lemon.sh  fetch_utf8proc.sh
tools/vscode-cimple/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+1205 files in other folders)
